cleaning up some of the javascript and improving density of datapoints rendered after zooming in

--- a/static/style.css
+++ b/static/style.css
@@ -22,6 +22,19 @@ cursor: crosshair;
     font-size: 11px;
 }
 
+.rotate {
+/* Safari */
+-webkit-transform: rotate(-90deg);
+/* Firefox */
+-moz-transform: rotate(-90deg);
+/* IE */
+-ms-transform: rotate(-90deg);
+/* Opera */
+-o-transform: rotate(-90deg);
+/* Internet Explorer */
+filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
+}
+
 rect.selection {
 
   -webkit-touch-callout: none !important;
