--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     {% block head %}
-    <script src="https://d3js.org/d3.v3.js"></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/spin.js/2.0.1/spin.min.js'></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='d3.v3.min.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='spin.min.js') }}"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <title>{% block title %}{% endblock %}</title>
     {% endblock %}
