--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block title %}Index{% endblock %}
+{% block title %}Logistic Map{% endblock %}
 {% block head %}
   {{ super() }}
 {% endblock %}
@@ -8,6 +8,7 @@
 {% endblock %}
 {% block content %}
     <h1>Logistic Equation Calculator</h1>
+    <p>click-drag to zoom into regions of interest
 
 {% endblock %}
 {% block footer %}
