--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block title %}Logistic Map{% endblock %}
+{% block title %}{{ super() }}{% endblock %}
 {% block head %}
   {{ super() }}
 {% endblock %}
@@ -7,25 +7,29 @@
     {{ super() }}
 {% endblock %}
 {% block content %}
-    <h1>Logistic Equation Calculator</h1>
-    <p>click-drag to zoom into regions of interest
-
+    <h1>Demo Home</h1>
 {% endblock %}
 {% block footer %}
-    <p><a href="/">Start Over</a></p>
-    <p class="internal">
-        See: <a href="https://en.wikipedia.org/wiki/Logistic_map">https://en.wikipedia.org/wiki/Logistic_map</a>
-    <p>
-        Xn+1 = R*Xn(1-Xn)
-        where Xn is a number between zero and one that represents the ratio of existing population
-        to the maximum possible population. The values of interest for the parameter
-        R are those in the interval 0,4
-    <p>
-        This code is free for anyone, available on <a href="https://github.com/adamtracy/demo_logistic">GitHub.</a>
+<p>This is a demo site where I'm practicing Flask application development.  I'm using the
+    fractal plot of the Logistic Map as a means of exploring this framework.
+</p>
+<p>Topics covered include</p>
+<ul>
+    <li>Templating</li>
+    <li>Authentication via OAuth -- presently only Google Authentication allowed</li>
+    <li>D3JS visualization in Javascript</li>
+    <li>RESTful data fetch via AJAX</li>
+</ul>
+    <p><a href="/logistic_equation">Visit the Logistic Equation</a> </p>
 {% endblock %}
 
 {% block postscript %}
-<!-- you have to load your d3 code *after* the basic HTML DOM structure has been
-     loaded, otherwise you will get a blank stare -->
- <script type="text/javascript" src="{{ url_for('static', filename='logistic.js') }}"></script>
+  {% if not user.is_anonymous %}
+    <p>User {{ user.username }}  <a href="/logout">Logout</a> </p>
+  {% else %}
+            <a href={{ url_for('oauth_authorize', provider='google') }}>
+            <img src="{{ url_for('static', filename='img/btn_google_signin_dark_normal_web.png') }}" />
+        </a>
+  {% endif %}
+
 {% endblock %}
