adding configuration, reorganizing structure

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -31,5 +31,5 @@
             <img src="{{ url_for('static', filename='img/btn_google_signin_dark_normal_web.png') }}" />
         </a>
   {% endif %}
-
+<p>This code is available on <a href="https://github.com/adamtracy/demo_logistic">GitHub</a>.</p>
 {% endblock %}
