--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -8,7 +8,7 @@
     <title>{% block title %}{{ title }}{% endblock %}</title>
     {% endblock %}
   </head>
-  <body>
+  <body class="content">
     <div id="header">
       {% block content_header %}
       {% endblock %}
